Fixed visual issues when high contrast mode enabled.

--- a/src/scripts/OSFramework/OSUI/Pattern/SectionIndex/scss/_sectionindex.scss
+++ b/src/scripts/OSFramework/OSUI/Pattern/SectionIndex/scss/_sectionindex.scss
@@ -72,6 +72,22 @@
 	}
 }
 
+// OS HighContrast Enabled -------------------------------------------------------
+///
+.os-hight-contrast {
+	.osui-section-index::before {
+		border-left: 1px solid var(--color-focus-outer);
+	}
+
+	.osui-section-index-item {
+		&--is-active {
+			&::before {
+				border-left: 4px solid var(--color-focus-outer);
+			}
+		}
+	}
+}
+
 // IsRTL -------------------------------------------------------------------------
 ///
 .is-rtl {
